--- a/web/index.html
+++ b/web/index.html
@@ -61,3 +61,6 @@
   </script>
 </body>
 </html>
+
+<!-- Our definition that required for Google Sign In -->
+<meta name="google-signin-client_id" content="907414361778-tf8r5jq9pv9va13qv6tj5bqufsvglfc2.apps.googleusercontent.com">
